Change History
==============

0.2 - Unreleased
----------------
- ``botocore.session.Session.create_client`` does not support threading. See: boto/botocore#1033
- tox support.
- universal wheel support.

0.1 - 2016-04-09
----------------
- Initial release.