@@ -6,7 +6,14 @@ from botocore.session import Session as CoreSession
 from pyramid.settings import asbool, aslist
 
 
-__version__ = '0.2.dev0'
+__version__ = '0.2.dev1'
+
+
+default_settings = {
+    # 'cache_factory': '',
+    # 'cache_factory': 'gevent.local.local',
+    'cache_factory': 'threading.local',
+}
 
 
 def lstrip_settings(settings, prefix):
@@ -43,10 +50,12 @@ def config_factory(settings):
     return config
 
 
-def client_factory(session_name, settings):
+def client_factory(session_name, client_name, settings, cache=None):
     """
     :type session_name: str
+    :type client_name: str
     :type settings: dict
+    :type cache: threading.local, gevent.local.local
     :rtype: (object, pyramid.request.Request)->
                 boto3.resources.base.ResourceBase
     """
@@ -56,18 +65,25 @@ def client_factory(session_name, settings):
         :type request: pyramid.request.Request
         :rtype: botocore.client.BaseClient
         """
-        session = request.find_service(name=session_name)
-        client = session.client(**settings)
+        client = None
+        if cache is not None:
+            client = getattr(cache, client_name, None)
+        if client is None:
+            session = request.find_service(name=session_name)
+            client = session.client(**settings)
+            if cache is not None:
+                setattr(cache, client_name, client)
         return client
 
     return factory
 
 
-def resource_factory(session_name, settings):
+def resource_factory(session_name, resource_name, settings, cache=None):
     """
     :type session_name: str
-    :type service_name: str
+    :type resource_name: str
     :type settings: dict
+    :type cache: threading.local, gevent.local.local
     :rtype: (object, pyramid.request.Request)->
                 boto3.resources.base.ResourceBase
     """
@@ -77,16 +93,24 @@ def resource_factory(session_name, settings):
         :type request: pyramid.request.Request
         :rtype: boto3.resources.base.ResourceBase
         """
-        session = request.find_service(name=session_name)
-        resource = session.resource(**settings)
+        resource = None
+        if cache is not None:
+            resource = setattr(cache, resource_name, None)
+        if resource is None:
+            session = request.find_service(name=session_name)
+            resource = session.resource(**settings)
+            if cache is not None:
+                setattr(cache, resource_name, resource)
         return resource
 
     return factory
 
 
-def session_factory(settings):
+def session_factory(session_name, settings, cache=None):
     """
+    :type session_name: str
     :type settings: dict
+    :type cache: threading.local, gevent.local.local
     :rtype: (object, pyramid.request.Request)-> boto3.Session
     """
     core_settings = lstrip_settings(settings, 'core.')
@@ -100,17 +124,23 @@ def session_factory(settings):
         :type request: pyramid.request.Request
         :rtype: boto3.Session
         """
-        core_session = None
-        if core_settings:
-            core_session = CoreSession()
-            for k, v in CoreSession.SESSION_VARIABLES.items():
-                if k in core_settings:
-                    var = core_settings[k]
-                    (ini_key, env_key, default, converter) = v
-                    if converter:
-                        var = converter(var)
-                    core_session.set_config_variable(k, var)
-        session = Session(botocore_session=core_session, **settings)
+        session = None
+        if cache is not None:
+            session = getattr(cache, session_name, None)
+        if session is None:
+            core_session = None
+            if core_settings:
+                core_session = CoreSession()
+                for k, v in CoreSession.SESSION_VARIABLES.items():
+                    if k in core_settings:
+                        var = core_settings[k]
+                        (ini_key, env_key, default, converter) = v
+                        if converter:
+                            var = converter(var)
+                        core_session.set_config_variable(k, var)
+            session = Session(botocore_session=core_session, **settings)
+            if cache is not None:
+                setattr(cache, session_name, session)
         return session
 
     return factory
@@ -121,7 +151,13 @@ def configure(config, prefix='boto3.'):
     :type config: pyramid.config.Configurator
     :type prefix: str
     """
-    settings = lstrip_settings(config.get_settings(), prefix)
+    settings = default_settings.copy()
+    settings.update(lstrip_settings(config.get_settings(), prefix))
+
+    cache = None
+    cache_factory = config.maybe_dotted(settings.get('cache_factory'))
+    if cache_factory:
+        cache = cache_factory()
 
     session_map = {}
     for session_name in aslist(settings.get('sessions', '')):
@@ -129,14 +165,14 @@ def configure(config, prefix='boto3.'):
         session_map[session_name] = fqsn = prefix + qsn
         settings_local = lstrip_settings(settings, qsn + '.')
         config.register_service_factory(
-            session_factory(settings_local),
+            session_factory(fqsn, settings_local, cache),
             name=fqsn,
         )
 
     config_map = {}
     for config_name in aslist(settings.get('configs', '')):
-        settings_local = lstrip_settings(settings,
-                                         'config.{}.'.format(config_name))
+        qsn = 'config.{}'.format(config_name)
+        settings_local = lstrip_settings(settings, qsn + '.')
         config_map[config_name] = config_factory(settings_local)
 
     for domain, domain_plural, factory in (
@@ -144,18 +180,17 @@ def configure(config, prefix='boto3.'):
         ('resource', 'resources', resource_factory),
     ):
         for name in aslist(settings.get(domain_plural, '')):
-            settings_local = lstrip_settings(
-                settings,
-                '{}.{}.'.format(domain, name),
-            )
+            qsn = '{}.{}'.format(domain, name)
+            fqsn = prefix + qsn
+            settings_local = lstrip_settings(settings, qsn + '.')
             session_name = settings_local.pop('session')
             session_name = session_map[session_name]
             config_name = settings_local.pop('config', None)
             if config_name:
                 settings_local['config'] = config_map[config_name]
             config.register_service_factory(
-                factory(session_name, settings_local),
-                name=prefix + domain + '.' + name,
+                factory(session_name, fqsn, settings_local, cache),
+                name=fqsn,
             )
 
 
